# DAWN-Digital-Audio-Workstation

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
scripts/: generate_resources_header.py
src/: dawn_main.cpp
src/core/: CMakeLists.txt  logger.h
src/core/resource/: resource_cache.h  resource_loader.h  resource_manager.cpp  resource_manager.h
src/ui/: CMakeLists.txt  dawn_window.cpp  dawn_window.h  themes.h
src/ui/components/: CMakeLists.txt
src/ui/components/panels/: title_bar.cpp  title_bar.h
src/ui/controls/: CMakeLists.txt
src/ui/controls/button/: dawn_button.cpp  dawn_button.h
src/ui/theme/: dark.h  light.h  theme_data.h
src/ui/theme/styles/: button_style.h
